--- a/Assets/Resources/test_configs/spawner_button_test.yaml
+++ b/Assets/Resources/test_configs/spawner_button_test.yaml
@@ -75,7 +75,7 @@ arenas:
       #       - !Vector3 {x: 15, y: 1, z: 25}
 
       # - !freezeAgent
-      #     freezeDuration: 1
+      #     freezeSteps: 50
 
       # Note this can't be used with the button but putting it here for now for consistency
       # - !grantContinuousReward
